Fixed container size, removed scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,7 +126,6 @@ main{
 }
 
 .userImg:hover{
-  border:3px solid var(--greyish);
   transform:scale(1.1);
 }
 .opnImg{
